# sockudo

./: .dockerignore  .env  .env.example  .env.multinode.example  .gitignore  ABLY_HISTORY_RECOVERY_PHASE_2_PROMPTS.md  ABLY_HISTORY_RECOVERY_PHASE_3_PROMPTS.md  ABLY_HISTORY_RECOVERY_PROMPTS.md  ABLY_MESSAGE_ANNOTATION_MODIFICATION_PROMPTS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DELTA_COMPRESSION.md  Dockerfile  FEATURE_COMPARISON.md  LICENSE  Makefile  Package.resolved  Package.swift  README-Docker.md  README.md  composer.json  deny.toml  docker-compose.ai-transport.yml  docker-compose.benchmark.yml  docker-compose.dashboard.yml  docker-compose.dev.yml  docker-compose.multinode.yml  docker-compose.prod.yml  docker-compose.redis-cluster.yml  docker-compose.test.yml  docker-compose.unix-socket.yml  docker-compose.yml  package.json  setup.sh  skills-lock.json  test_config.rs
benches/ai/: Cargo.toml
benches/ai/baselines/: ai_hot_paths.budgets.json
benches/ai/benches/: ai_hot_paths.rs
crates/sockudo-ably-compat/: Cargo.toml
crates/sockudo-ably-compat/benches/: ably_vcdiff.rs  compatibility_hot_paths.rs  fanout_grouping.rs  realtime_retry_id.rs  stats_recording.rs  wire_codec.rs
crates/sockudo-ably-compat/proptest-regressions/: codec.txt
crates/sockudo-ably-compat/src/: auth.rs  benchmark.rs  channel_name.rs  codec.rs  error.rs  filter.rs  lib.rs  outbound.rs  protocol.rs  runtime.rs  services.rs  stats.rs
crates/sockudo-adapter/: Cargo.toml
crates/sockudo-adapter-local/: Cargo.toml
crates/sockudo-adapter-local/src/: app.rs  backend.rs  lib.rs  metrics.rs
crates/sockudo-adapter-nats/: Cargo.toml
crates/sockudo-adapter-nats/src/: backend.rs  lib.rs
crates/sockudo-adapter-redis/: Cargo.toml
crates/sockudo-adapter-redis/src/: backend.rs  lib.rs
crates/sockudo-adapter/benches/: hot_path_replacements.rs
crates/sockudo-adapter/src/: channel_manager.rs  cleanup.rs  connection_manager.rs  factory.rs  filter_index.rs  horizontal_adapter.rs  horizontal_adapter_base.rs  horizontal_transport.rs  lib.rs  local_adapter.rs  message_predicate.rs  presence.rs  replay_buffer.rs  serialization.rs  services.rs  v2_broadcast.rs  watchlist.rs
crates/sockudo-adapter/tests/: cleanup_fallback_tests.rs  cleanup_sender_tests.rs  redis_sentinel_live.rs
crates/sockudo-cache/: Cargo.toml
crates/sockudo-cache/src/: factory.rs  fallback_cache_manager.rs  lib.rs  manager.rs  memory_cache_manager.rs  redis_cache_manager.rs  redis_cluster_cache_manager.rs
crates/sockudo-config/: Cargo.toml
crates/sockudo-config/src/: adapter.rs  drivers.rs  lib.rs  queue.rs  webhook.rs
crates/sockudo-core/: Cargo.toml
crates/sockudo-core/benches/: annotation_replay.rs  history_bench.rs  namespace_bench.rs  presence_registry.rs  versioned_message_streaming.rs
crates/sockudo-core/examples/: profile_namespace_ref_allocs.rs
crates/sockudo-core/src/: adapter_types.rs  annotations.rs  app.rs  app_manager.rs  app_store.rs  auth.rs  cache.rs  capability_token.rs  channel.rs  channel_store.rs  cleanup.rs  connection_lifecycle.rs  connection_manager.rs  delta_compression.rs  error.rs  history.rs  idempotency.rs  lib.rs  message_envelope.rs  metrics.rs  namespace.rs  options.rs  origin_validation.rs  presence_registry.rs  queue.rs  redis_client.rs  token.rs  utils.rs  version_store.rs  versioned_message_auth.rs  versioned_messages.rs  watchlist.rs  webhook_types.rs  websocket.rs
crates/sockudo-core/tests/: docs_config_defaults.rs  unix_socket_config.rs
crates/sockudo-filter/: Cargo.toml  README.md
crates/sockudo-filter/benches/: filter_bench.rs
crates/sockudo-filter/src/: index.rs  lib.rs  node.rs  ops.rs  predicate.rs
crates/sockudo-metrics/: Cargo.toml
crates/sockudo-metrics/src/: lib.rs  prometheus.rs
crates/sockudo-options/: Cargo.toml
crates/sockudo-options/src/: lib.rs
crates/sockudo-protocol/: Cargo.toml
crates/sockudo-protocol/benches/: ai_headers_bench.rs
crates/sockudo-protocol/src/: constants.rs  lib.rs  messages.rs  protocol_version.rs  versioned_messages.rs  wire.rs
crates/sockudo-protocol/tests/: protocol_compliance.rs
crates/sockudo-queue-memory/: Cargo.toml
crates/sockudo-queue-memory/src/: backend.rs  lib.rs
crates/sockudo-queue-redis/: Cargo.toml
crates/sockudo-queue-redis/src/: backend.rs  lib.rs
crates/sockudo-queue-sqs/: Cargo.toml
crates/sockudo-queue-sqs/src/: backend.rs  lib.rs
crates/sockudo-rate-limiter/: Cargo.toml
crates/sockudo-rate-limiter/src/: factory.rs  lib.rs  memory_limiter.rs  middleware.rs  redis_cluster_limiter.rs  redis_limiter.rs
crates/sockudo-runtime/: Cargo.toml
crates/sockudo-runtime/src/: http.rs  http_handler.rs  lib.rs  middleware.rs  options.rs  token.rs  utils.rs  ws_handler.rs
crates/sockudo-server/: Cargo.toml
crates/sockudo-server/src/: history.rs  history_dynamodb.rs  history_mysql.rs  history_scylla.rs  history_surreal.rs  http_handler.rs  logging.rs  main.rs  middleware.rs  push_http.rs  ws_handler.rs
crates/sockudo-server/tests/: clustered_durable_history_redis_test.rs
crates/sockudo-simulator/: Cargo.toml
crates/sockudo-simulator/corpus/: disaster-seeds.json  storage-faults.json  swarm-seeds.json
crates/sockudo-simulator/examples/: disaster-report.example.json
crates/sockudo-simulator/src/: config.rs  error.rs  io.rs  lib.rs  main.rs  push_lab.rs  real_subsystems.rs  shrink.rs  simulator.rs  workload.rs
crates/sockudo-store-dynamodb/: Cargo.toml
crates/sockudo-store-postgres/: Cargo.toml
crates/sockudo-store-scylla/: Cargo.toml
crates/sockudo-store-scylla/src/: lib.rs  (+1 more)
crates/sockudo-types/: Cargo.toml
crates/sockudo-webhook-http/: Cargo.toml
crates/sockudo-webhook-lambda/: Cargo.toml
crates/sockudo-workspace-hack/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ably_auth.rs  ably_channel_filter.rs  ably_continuity_state.rs  ably_protocol_rest.rs  ai_header_validator.rs  capability_map.rs  connection_state.rs  history_cursor.rs  message_data.rs  mutation_request.rs  push_payload_mapping.rs  versioned_wire.rs  wire_formats.rs  wire_message.rs
(+1753 files in other folders)
