[package]
name = "sockudo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "^0.8.4", features = ["ws"] }
tokio = { version = "^1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "^0.6.4", features = ["cors"] }
fastwebsockets = { version = "0.10.0", features = [
    "upgrade",
    "with_axum",
    "unstable-split",
    "hyper-util",
    "hyper",
] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
thiserror = "2.0.9"
dashmap = "6.1.0"
futures = "0.3.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1.11.1"
hmac = "0.13.0-pre.4"
sha2 = "0.11.0-pre.4"
hex = "0.4.3"
rand = "0.9.0"
hyper-util = "0.1.10"
hyper = "1.5.0"
colored = "*"
chrono = "*"
sysinfo = "*"
async-trait = "0.1.83"
anyhow = "1.0.94"
redis = { version = "0.31.0", features = ["tokio-comp", "json", "cluster", "cluster-async"] }
rayon = "1.10.0"
log = "0.4.22"
rusty-sidekiq = { version = "0.13.2", default-features = false, optional = true }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql", "postgres"] }
aws-config = { version = "^1.6", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.71.1"
urlencoding = "2.1.3"
futures-util = "0.3.31"
tower-layer = "0.3.3"
tower-service = "0.3.3"
lazy_static = "1.5.0"
prometheus = "0.14.0"
once_cell = "1.20.2"
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.15", features = ["json"] }
aws-sdk-sqs = "1.65.0"
async-nats = "0.40.0"
aws-sdk-lambda = "1.76.0"
url = { version = "2.3.1", features = ["serde"] }
hostname = "0.4.1"
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
rustls = "0.23.25"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
http = "1.3.1"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
rusty-sidekiq = ["dep:rusty-sidekiq"]

[profile.release]
codegen-units = 1
lto = true
