[package]
name = "sockudo-adapter-local"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "Local adapter implementation crate"

[dependencies]
sockudo-core = { path = "../sockudo-core" }
sockudo-config = { path = "../sockudo-config" }
sockudo-types = { path = "../sockudo-types" }
sockudo-protocol = { path = "../sockudo-protocol" }
sockudo-filter = { path = "../sockudo-filter" }
ahash = "0.8.12"
async-trait = "0.1.89"
bytes = "1.10"
dashmap = "6.1.0"
futures = "0.3.31"
num_cpus = "1.17.0"
sonic-rs = "0.5.6"
serde = { version = "^1", features = ["derive"] }
base64 = "0.22"
tokio = { version = "^1", features = ["full", "tracing"] }
tracing = "0.1"
sockudo-ws = { version = "1.7.4", features = ["axum-integration"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
sockudo-workspace-hack = { version = "0.1", path = "../sockudo-workspace-hack" }
