[package]
name = "sockudo-core"
description = "Core traits, types, error handling, and configuration for Sockudo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
default = ["local"]
local = []
ai-transport = []
full = [
  "redis",
  "redis-cluster",
  "nats",
  "pulsar",
  "rabbitmq",
  "google-pubsub",
  "kafka",
  "iggy",
  "mysql",
  "postgres",
  "dynamodb",
  "surrealdb",
  "scylladb",
  "sqs",
  "sns",
  "lambda",
]
redis = ["dep:redis"]
redis-cluster = ["redis"]
nats = []
pulsar = []
rabbitmq = []
google-pubsub = []
kafka = []
iggy = []
mysql = []
postgres = []
dynamodb = []
surrealdb = []
scylladb = []
sqs = []
sns = []
lambda = []

[dependencies]
sockudo-protocol = { workspace = true }
sockudo-filter = { workspace = true }

ahash = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
crossfire = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
jsonwebtoken = { workspace = true }
md5 = { workspace = true }
memchr = { workspace = true }
parking_lot = { workspace = true }
papaya = { workspace = true }
rand = { workspace = true }
redis = { workspace = true, optional = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = "1"
serde-aux = { workspace = true }
sha2 = { workspace = true }
sockudo-ws = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "history_bench"
path = "benches/history_bench.rs"
harness = false

[[bench]]
name = "namespace_bench"
path = "benches/namespace_bench.rs"
harness = false

[[bench]]
name = "presence_registry"
path = "benches/presence_registry.rs"
harness = false

[[bench]]
name = "annotation_replay"
path = "benches/annotation_replay.rs"
harness = false

[[bench]]
name = "versioned_message_streaming"
path = "benches/versioned_message_streaming.rs"
harness = false
