[package]
name = "sockudo-options"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "Server options and configuration model for Sockudo"

[dependencies]
sockudo-core = { path = "../sockudo-core" }
sockudo-config = { path = "../sockudo-config" }
sockudo-types = { path = "../sockudo-types" }
ahash = { version = "0.8.12", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
tracing = "0.1"
url = { version = "2.5.7", features = ["serde"] }
urlencoding = "2.1.3"
sonic-rs = "0.5.6"
tokio = { version = "^1", features = ["fs"] }
sockudo-ws = { version = "1.7.4", features = ["axum-integration"] }
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
sockudo-workspace-hack = { version = "0.1", path = "../sockudo-workspace-hack" }
