[package]
name = "sockudo-protocol"
description = "Pusher protocol message types and constants for Sockudo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
ahash = { workspace = true }
prost = "0.14.1"
rmp-serde = "1.3.0"
serde = { workspace = true }
serde_bytes = "0.11"
serde_json = "1"
sonic-rs = { workspace = true }
uuid = { workspace = true }

[features]
default = []
ai-transport = []

[dev-dependencies]
criterion = { workspace = true }
serde_json = "1"

[[bench]]
name = "ai_headers_bench"
path = "benches/ai_headers_bench.rs"
harness = false
