[package]
name = "sockudo-queue-memory"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "In-memory queue backend for Sockudo"

[dependencies]
sockudo-types = { path = "../sockudo-types" }
async-trait = "0.1.89"
dashmap = "6.1.0"
ahash = { version = "0.8.12", features = ["serde"] }
tokio = { version = "1", features = ["rt", "time", "macros", "sync"] }
tracing = "0.1"
sockudo-workspace-hack = { version = "0.1", path = "../sockudo-workspace-hack" }

[dev-dependencies]
chrono = "0.4"
