[package]
name = "sockudo-rate-limiter"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "Rate limiting implementations and middleware for Sockudo"

[features]
default = []
redis = ["dep:redis"]
redis-cluster = ["redis"]

[dependencies]
sockudo-core = { path = "../sockudo-core" }
sockudo-options = { path = "../sockudo-options" }
sockudo-config = { path = "../sockudo-config" }
async-trait = "0.1.89"
axum = { version = "^0.8", features = ["ws"] }
futures-util = "0.3.31"
hyper = "^1.7.0"
sonic-rs = "0.5.6"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1"
dashmap = "^6.1.0"
tokio = { version = "^1", features = ["sync", "time", "rt"] }
ahash = { version = "0.8.12", features = ["serde"] }
redis = { version = "^1", features = [
  "tokio-comp",
  "json",
  "cluster",
  "cluster-async",
  "tls-rustls",
  "tokio-rustls-comp",
  "tls-rustls-webpki-roots",
  "connection-manager",
], optional = true }
sockudo-workspace-hack = { version = "0.1", path = "../sockudo-workspace-hack" }
