[package]
name = "sockudo-runtime"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "Sockudo runtime orchestration crate"

[features]
default = ["local"]
local = []
full = [
  "redis",
  "redis-cluster",
  "nats",
  "mysql",
  "postgres",
  "dynamodb",
  "scylladb",
  "sqs",
  "lambda",
]

redis = ["dep:redis", "dep:sockudo-queue-redis", "sockudo-core/redis"]
redis-cluster = ["redis", "sockudo-config/redis-cluster", "dep:sockudo-queue-redis-cluster"]
nats = ["dep:async-nats", "sockudo-config/nats", "sockudo-core/nats"]
mysql = ["dep:sqlx"]
postgres = ["dep:sqlx"]
dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb"]
scylladb = ["dep:scylla"]
sqs = ["dep:aws-config", "dep:aws-sdk-sqs", "dep:sockudo-queue-sqs"]
lambda = ["dep:aws-config", "dep:aws-sdk-lambda", "dep:sockudo-webhook-lambda"]

[dependencies]
sockudo-core = { path = "../sockudo-core" }
sockudo-config = { path = "../sockudo-config" }
sockudo-types = { path = "../sockudo-types" }
sockudo-protocol = { path = "../sockudo-protocol" }
sockudo-filter = { path = "../sockudo-filter" }
sockudo-adapter-local = { path = "../sockudo-adapter-local" }
sockudo-queue-memory = { path = "../sockudo-queue-memory" }
sockudo-queue-redis = { path = "../sockudo-queue-redis", optional = true }
sockudo-queue-redis-cluster = { path = "../sockudo-queue-redis-cluster", optional = true }
sockudo-queue-sqs = { path = "../sockudo-queue-sqs", optional = true }
sockudo-webhook-http = { path = "../sockudo-webhook-http" }
sockudo-webhook-lambda = { path = "../sockudo-webhook-lambda", optional = true }
cmake = "0.1.56"
axum = { version = "^0.8", features = ["ws"] }
tokio = { version = "^1", features = ["full", "tracing"] }
tower-http = { version = "^0.6.6", features = ["cors"] }
sockudo-ws = { version = "1.7.4", features = ["axum-integration"] }
serde = { version = "^1", features = ["derive"] }
sonic-rs = "0.5.6"
thiserror = "^2.0.17"
dashmap = "^6.1.0"
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
regex = "1.12.2"
hmac = "0.13.0-rc.3"
sha2 = "0.11.0-rc.3"
hex = "0.4.3"
rand = "0.9.2"
hyper-util = "^0.1.17"
hyper = "^1.7.0"
chrono = "^0.4.42"
sysinfo = "0.37.2"
async-trait = "0.1.89"
redis = { version = "^1", features = [
  "tokio-comp",
  "json",
  "cluster",
  "cluster-async",
  "tls-rustls",
  "tokio-rustls-comp",
  "tls-rustls-webpki-roots",
  "connection-manager",
], optional = true }
sqlx = { version = "^0.8.6", features = [
  "runtime-tokio-rustls",
  "mysql",
  "postgres",
  "tls-rustls",
], optional = true }
scylla = { version = "1.3.1", features = ["rustls-023"], optional = true }
aws-config = { version = "^1.8.10", features = ["behavior-version-latest"], optional = true }
aws-sdk-dynamodb = { version = "1.98.0", optional = true }
urlencoding = "2.1.3"
futures-util = "0.3.31"
tower-layer = "0.3.3"
tower-service = "0.3.3"
prometheus = "0.14.0"
moka = { version = "0.12.11", features = ["future", "sync"] }
reqwest = { version = "^0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "rustls-tls-webpki-roots",
] }
aws-sdk-sqs = { version = "1.89.0", optional = true }
async-nats = { version = "^0.45", optional = true }
aws-sdk-lambda = { version = "1.104.0", optional = true }
num_cpus = "1.17.0"
bytes = "1.10"
url = { version = "2.5.7", features = ["serde"] }
axum-server = { version = "^0.7", features = ["tls-rustls"] }
axum-extra = { version = "^0.12", features = ["typed-header"] }
http = "1.3.1"
ahash = { version = "0.8.12", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
md5 = "0.8.0"
serde_urlencoded = "0.7"
http-body-util = "0.1.3"
mockall = "0.13.1"
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std", "tls12"] }
tower = "0.5.2"
mimalloc = { version = "0.1.48", features = ["v3"] }
fossil-delta = "0.2.0"
base64 = "0.22"
oxidelta = "0.1.4"
serde_json_path = "0.7.2"
rayon = "1.10"
tokio-util = "0.7"
memchr = "2.7"
libc = "0.2"
uuid = { version = "1.18.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
sockudo-workspace-hack = { version = "0.1", path = "../sockudo-workspace-hack" }
