[package]
name = "sockudo-types"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "Shared domain types for Sockudo"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde-aux = "4"
rand = "0.9.2"
ahash = { version = "0.8.12", features = ["serde"] }
sonic-rs = "0.5.6"
url = { version = "2.5.7", features = ["serde"] }
sockudo-workspace-hack = { version = "0.1", path = "../sockudo-workspace-hack" }
